@@ -29,6 +29,7 @@ Date: 2024-08-09
     - (everyone say "Thank you PennyJim" in unison) added a way to personalise belt tiers in the mod settings! you can change them to the colours on the rainbow, plus a couple others.
     - Added Fuel Rods, as the power source for personal reactors. Currently, only Polonium fuel cells exist.
     - Added new recipes to acid dilution, and PModernised it slightly (post-0.4.6 modernisation)
+    - Revamped oil processing in its entirety, keeping its basic structure but reworking the recipes and chains to be PModernised.
 
   Changes:
     - Gave glass its own row of recipes, and moved science bottles there.
@@ -85,6 +86,7 @@ Date: 2024-08-09
     - Merged Welder 1 and Basic Alloying into one tech, and re-named it to Brass Processing.
     - Changed Crude oil fractional distillation to a trigger technology.
     - Changed Chlorine processing to a trigger technology.
+    - Changed butene/butane cracking to washing plants, to lower the need of chemical plants.
 
   Fixes:
     - Fixed some wood-related recipes not being in the same place.
